# rust_realsense_gstreamer_udp_stream

./: Cargo.toml  README.md
src/: initial_working_version.rs  main.rs
