[package]
name = "rust_realsense_udp_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
gstreamer = "0.22.2"
gstreamer-app = "0.22.0"
gstreamer-video = "0.22.1"
realsense-rust = "1.2.3"
